applications/apps/config-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-service
  namespace: quiz
spec:
  replicas: 2
  selector:
    matchLabels:
      app: config-service
  template:
    metadata:
      labels:
        app: config-service
    spec:
      containers:
        - name: config-service
          image: sudhinms/quiz-config-app:08b3dba
          imagePullPolicy: Always
          ports:
            - containerPort: 8880
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
